# RADI

./: AGENTS.md  README.md  pyproject.toml  requirements.txt
scripts/: build_simax_package.py  make_plots.py  paper_tables.py  run_ablation.py  run_all.py  run_diagonal.py  run_formal_scales.py  run_laplacian.py  run_smoke.py  summarize_ablation.py  summarize_formal.py
src/radi_net/: __init__.py  adi.py  cli.py  experiments.py  matrices.py  metrics.py  plotting.py  radi_net.py  rhs.py  shifts.py  spectral.py
tests/: test_radi_net_training.py  test_residual_identity.py  test_scalar_adi.py  test_shift_objective.py  test_spectral_weights.py
